--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Pesquisa"></activity>
         <activity android:name=".Gps" />
         <activity android:name=".Perfil" />
         <activity android:name=".Cadastro" />
